--- a/sparkle-hackwat/css/zipassist.css
+++ b/sparkle-hackwat/css/zipassist.css
@@ -2,6 +2,26 @@ body {
 	background-color: #830F14;
 }
 
+#list {
+  margin-top: 20px;
+  margin-left: 10px;
+}
+
+#list h1 {
+  font-size: 18px;
+  margin:0px;
+  padding: 0px;
+}
+
+#list ul {
+  padding: 0px;
+  margin-left:30px;
+  margin-top:4px;
+}
+
+#list ul li {
+}
+
 #add {
   position: absolute;
   top: 240px;
@@ -16,11 +36,15 @@ body {
 	border-radius: 15px;
 }
 
+.postrank_text {
+  padding-right: 10px;
+  line-height:10px;
+}
+
 #content img {
 	margin: 0;
 	padding: 0;
 	vertical-align: middle;
-  margin-top: -53px;
 }
 
 #zipassist {
@@ -123,7 +147,7 @@ span.postrank_metric {
 
   height: 16px;
   padding: 0;
-  padding-left: 20px;
+  padding-left: 16px;
   margin-right: 5px;
 
   color: #666;
